# Arcade-IGSPGM_MiSTer

./: .clang-format  .gitignore  .gitmodules  .rules.verible_lint  Arcade-IGSPGM.qpf  Arcade-IGSPGM.qsf  Arcade-IGSPGM.sv  Makefile  README.md  files.qip
.slang/: server.json  slang-server.f
docs/: sim-server.md
hardware/: C2988369.kicad_sym  C47326496.kicad_sym  PGM_Cart.kicad_mod
hardware/PGMAudioExtractor/: .gitignore  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  TODO.md
hardware/PGMAudioExtractor/.pi/skills/rp2350-picotool/: SKILL.md
hardware/PGMAudioExtractor/src/: capture_stream.c  capture_stream.h  main.c  rate_measure.c  rate_measure.h  reset_interface_app.c  ring_buffer.c  ring_buffer.h  serial_audio_capture.c  serial_audio_capture.h  serial_audio_capture.pio  tusb_config.h  usb_audio.c  usb_audio.h  usb_descriptors.c  usb_descriptors.h
hardware/PGMAudioExtractor/tools/: capture_stream.py  serial_monitor.py
releases/: PGM.mra  espgalbl.mra
rtl/: PGM.sv  address_translator.sv  audio_mix.sv  coin_pulse.sv  ddram.sv  igs023.sv  igs023_bg.sv  igs023_buffer.sv  igs023_fg.sv  igs023_sprite.sv  igs026_x.sv  igs026_z80.sv  jt10_auto_ss.sv  jtframe_frac_cen.v  memory_stream.sv  pause.sv  pgm_asic3.sv  pll.qip  pll.v  ram.sv  rom_cache.sv  rom_loader.sv  savestate_ui.sv  savestates.sv  sdram.sv  system_consts.sv  tv80_auto_ss.sv  v3021.sv  video_path.sv  video_timing.sv
sim/: .clang-tidy  .gitignore  .nvim.lua  Makefile  NAMING_CONVENTIONS.md  check-naming.sh  file_search.cpp  file_search.h  games.cpp  games.h  gfx_cache.h  igs023.cpp  igs023_sprite.cpp  imgui_wrap.cpp  imgui_wrap.h  m68k.cpp  m68k.h  mra_loader.cpp  mra_loader.h  mra_loader_example.cpp  sim.h  sim_audio_capture.cpp  sim_audio_capture.h  sim_command.cpp  (+27 more)
util/: .gitignore  Soltan_G42_audio_filters_v0.7.py  frac_calc.py  pyproject.toml  run_z80_sound_capture.py  split_rom.py  state_module.py
(+78 files in other folders)
