[project]
name = "util"
version = "0.1.0"
description = "Utilities for Taito F2 MiSTer FPGA core development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anytree>=2.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
